# speech-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  CNAME  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  run_tests.sh  sitemap.xml  version.py
.github/workflows/: ci.yaml  deploy-docs.yaml  release.yaml
about/: index.html
app/: config.py  database.py  requirements.txt
app/ai/: client.py
app/alembic/: env.py
app/bot/: dp.py
app/crud/: question.py  question_crud.py  user.py  user_answers_crud.py  user_crud.py
app/models/: schema.py
app/routes/: question.py
app/schemas/: question_schema.py  user_schema.py
app/services/: audio_service.py  auth.py  auth_service.py  download_service.py  question.py  question_service.py  upload_service.py  whisper_service.py
app/utils/: database.py
assets/css/: styles.371bdb19.css  styles.4250e5c9.css  styles.65574833.css  (+1 more)
blog/: atom.xml  index.html  rss.xml
contact/: index.html
data/: architecture.txt  interview.txt  toefl1.txt
deploy/: entrypoint.sh
docs/: STRUCTURE.md  architecture.dot  docker-compose.yaml  docusaurus.config.ts  package.json  roadmap.md
docs-old/: STRUCTURE.md  architecture.dot
docs-site/: Dockerfile  docker-compose.yaml  docusaurus.config.ts  package-lock.json  sidebars.ts
features/: index.html
markdown-page/: index.html
scripts/: add_inits.py  load_questions.py  shuffle.py
tech-stack/: index.html
tests/: README.md  conftest.py
(+559 files in other folders)
